--- a/jwplayer.html
+++ b/jwplayer.html
@@ -1,84 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>noobgltch</title>
-    <link rel="stylesheet" href="https://cxh.pages.dev/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>NoobGLTCH</title>
+  <link rel="stylesheet" href="https://cxh.pages.dev/style.css" />
+  <style>
+    #player {
+      position: absolute;
+      width: 100% !important;
+      height: 100% !important;
+    }
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background: #000;
+    }
+  </style>
 </head>
 <body>
-    <style>
-        #player {
-            position: absolute;
-            width: 100% !important;
-            height: 100% !important;
+  <div id="player"></div>
+
+  <!-- JW Player library -->
+  <script src="https://content.jwplatform.com/libraries/KB5zFt7A.js"></script>
+
+  <script>
+    // Setup JWPlayer instance
+    var playerInstance = jwplayer("player").setup({
+      file: "https://ev-fast-mpd.starzplayarabia.com/live/eds/CricLifeMax/DASH/CricLifeMax.mpd",
+      width: "100%",
+      height: "100%",
+      aspectratio: "16:9",
+      preload: "metadata",
+      autostart: false,
+      drm: {
+        clearkey: {
+          keyId: "ad59b720bd4b44d063686212b99484b5",  // ← from your URL
+          key: "e1744990edf98acc729c0773a3766583"      // ← from your URL
         }
-    </style>
+      },
+      controls: true,
+      pip: true,
+      title: "CricLifeMax",
+      quality: {
+        defaultAuto: true
+      },
+      fallback: {
+        message: "Your browser does not support this video format."
+      }
+    });
 
-    <div id="player"></div>
-
-    <script src='https://content.jwplatform.com/libraries/KB5zFt7A.js'></script>
-
-    <script>
-        var jwScript = document.createElement('script');
-        jwScript.src = "https://content.jwplatform.com/libraries/KB5zFt7A.js";
-        jwScript.async = true;
-        jwScript.onerror = function() {
-            console.error("Failed to load JW Player library.");
-            document.getElementById("player").innerHTML = "<p>Error loading video player.</p>";
-        };
-        document.head.appendChild(jwScript);
-
-        jwScript.onload = function() {
-            var playerInstance = jwplayer("player").setup({
-                file: "https://002.fclplayer.online/live/csstream2/playlist.m3u8?id=1002",
-                width: "100%",
-                height: "100%",
-                aspectratio: '16:9',
-                preload: 'metadata',
-                autostart: false,
-                fallback: {
-                    message: "Your browser does not support the video format or the player."
-                },
-                events: {
-                    error: function(e) {
-                        console.error("JW Player error:", e);
-                        alert("A JW Player error occurred: " + e.message);
-                    }
-                },
-                pip: true,
-                controls: true,
-                title: "star sports 1 hindi"
-            });
-
-            playerInstance.on('controls', function(event) {
-                console.log("Controls event:", event);
-            });
-
-            playerInstance.on('displayClick', function(event) {
-                console.log("displayClick event:", event);
-            });
-
-            playerInstance.on('ready', function(event){
-                console.log("player ready", event);
-            })
-
-            playerInstance.on('visualQuality', function(event){
-                console.log("visual quality changed", event);
-            })
-
-            playerInstance.on('bufferChange', function(event){
-                console.log('buffer change', event);
-            })
-
-            playerInstance.on('metaData', function(event){
-                console.log('meta data', event);
-            })
-
-            playerInstance.on('fullScreen', function(event){
-                console.log('full screen event', event);
-            })
-        };
-    </script>
+    // Example logging hooks (optional)
+    playerInstance.on("ready", function() {
+      console.log("JW Player ready ✔");
+    });
+    playerInstance.on("error", function(e) {
+      console.error("JW Player error:", e);
+      alert("Playback error: " + e.message);
+    });
+    playerInstance.on("play", () => console.log("▶ Playing"));
+    playerInstance.on("pause", () => console.log("⏸ Paused"));
+  </script>
 </body>
 </html>
