--- a/hindi.html
+++ b/hindi.html
@@ -63,9 +63,9 @@
   <h2>player 1</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
-  <iframe src="starsports1hindi.html"Video Player 3" frameborder="0"
-  allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen >
-</iframe>
+   <iframe src="jwplayer.html" title="Video Player 2" frameborder="0"
+    allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+    loading="lazy">
 <h3>to get latest updates of servers</h3>
   <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
     rel="noopener noreferrer">
