--- a/test.html
+++ b/test.html
@@ -1,67 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>live stream player</title>
-    <link rel="stylesheet" href="https://cdn.vidstack.io/player/theme.css" />
-    <link rel="stylesheet" href="https://cdn.vidstack.io/player/video.css" />
-    <script src="https://cdn.vidstack.io/player" type="module"></script>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            overflow: hidden;
-            background-color: black;
-        }
-
-        media-player {
-            width: 100%;
-            height: 100%;
-        }
-
-        media-poster {
-            background-size: cover;
-            background-position: center;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Multi-Player Iframe Demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      background: #111;
+      color: #fff;
+      font-family: Arial, sans-serif;
+    }
+    .grid {
+      display: flex;
+      flex-direction: column;
+    }
+    .frame-box {
+      margin: 8px;
+      border: 2px solid #444;
+      border-radius: 6px;
+      background: #000;
+      overflow: hidden;
+    }
+    .frame-title {
+      padding: 6px;
+      text-align: center;
+      background: #222;
+      font-weight: bold;
+      font-size: 14px;
+      border-bottom: 2px solid #444;
+    }
+    iframe {
+      width: 100%;
+      height: 500px; /* 👈 Fixed height */
+      border: none;
+    }
+    /* Responsive: side-by-side on wide screens */
+    @media (min-width: 1000px) {
+      .grid {
+        flex-direction: row;
+      }
+      .frame-box {
+        flex: 1;
+      }
+    }
+  </style>
 </head>
 <body>
-    <media-player
-        id="mediaPlayer"
-        title="player stream"
-        poster=""
-        view-type="video"
-        stream-type="live"
-        crossorigin
-        playsinline
-    >
-        <media-provider>
-            <media-poster slot="poster"></media-poster>
-        </media-provider>
-        <media-video-layout></media-video-layout>
-    </media-player>
+  <div class="grid">
+    <!-- JWPlayer -->
+    <div class="frame-box">
+      <div class="frame-title">JWPlayer Demo</div>
+      <iframe src="jwplayer.html" allowfullscreen></iframe>
+    </div>
 
-    <script>
-        // Function to get the URL parameter
-        function getQueryParam(param) {
-            const urlParams = new URLSearchParams(window.location.search);
-            return urlParams.get(param);
-        }
+    <!-- PlayerJS -->
+    <div class="frame-box">
+      <div class="frame-title">PlayerJS Demo</div>
+      <iframe src="playerjs.html" allowfullscreen></iframe>
+    </div>
 
-        // Get the stream URL from the query parameter
-        const streamUrl = getQueryParam('url');
-
-        // Set the stream URL to the media player
-        if (streamUrl) {
-            const mediaPlayer = document.getElementById('mediaPlayer');
-            mediaPlayer.setAttribute('src', streamUrl);
-        } else {
-            //If no url parameter is added, play a default url.
-            const mediaPlayer = document.getElementById('mediaPlayer');
-            mediaPlayer.setAttribute('src', "https://vkvsd63.okcdn.ru/hls/7896338336389.m3u8/sig/YnBbc_lu37w/expires/1742703600315/srcIp/103.186.185.230/urls/185.226.55.79/clientType/13/srcAg/CHROME/mid/8877922593669/7896338336389_high/index.m3u8"); //Changed URL
-        }
-    </script>
+    <!-- X Broadcast -->
+    <div class="frame-box">
+      <div class="frame-title">X Broadcast</div>
+      <iframe src="https://x.com/i/broadcasts/1zqKVdoOpQAJB" allowfullscreen></iframe>
+    </div>
+  </div>
 </body>
 </html>
