--- a/test.html
+++ b/test.html
@@ -12,16 +12,12 @@
       color: #fff;
       font-family: Arial, sans-serif;
     }
-    .grid {
-      display: flex;
-      flex-direction: column;
-    }
     .frame-box {
-      margin: 8px;
       border: 2px solid #444;
       border-radius: 6px;
       background: #000;
       overflow: hidden;
+      margin: 20px;            /* 👈 adds 5px space around each player */
     }
     .frame-title {
       padding: 6px;
@@ -33,16 +29,14 @@
     }
     iframe {
       width: 100%;
-      height: 500px; /* 👈 Fixed height */
+      height: 500px;          /* fixed height */
       border: none;
+      display: block;
     }
-    /* Responsive: side-by-side on wide screens */
-    @media (min-width: 1000px) {
-      .grid {
-        flex-direction: row;
-      }
-      .frame-box {
-        flex: 1;
+    /* Smaller height on mobile */
+    @media (max-width: 600px) {
+      iframe {
+        height: 300px;
       }
     }
   </style>
