--- a/test.html
+++ b/test.html
@@ -57,8 +57,8 @@
 
     <!-- X Broadcast -->
     <div class="frame-box">
-      <div class="frame-title">X Broadcast</div>
-      <iframe src="https://x.com/i/broadcasts/1zqKVdoOpQAJB" allowfullscreen></iframe>
+      <div class="frame-title">player 3</div>
+      <iframe src="https://myuser735.ifrem.net/iframe/frame.php" allowfullscreen></iframe>
     </div>
   </div>
 </body>
