--- a/test.html
+++ b/test.html
@@ -46,19 +46,19 @@
     <!-- JWPlayer -->
     <div class="frame-box">
       <div class="frame-title">JWPlayer Demo</div>
-      <iframe src="jwplayer.html" allowfullscreen></iframe>
+      <iframe src="playerjs.html" allowfullscreen></iframe>
     </div>
 
     <!-- PlayerJS -->
     <div class="frame-box">
       <div class="frame-title">PlayerJS Demo</div>
-      <iframe src="playerjs.html" allowfullscreen></iframe>
+      <iframe src="jwplayer.html" allowfullscreen></iframe>
     </div>
 
     <!-- X Broadcast -->
     <div class="frame-box">
       <div class="frame-title">player 3</div>
-      <iframe src="https://myuser735.ifrem.net/iframe/frame.php" allowfullscreen></iframe>
+      <iframe src="#" allowfullscreen></iframe>
     </div>
   </div>
 </body>
