--- a/test.html
+++ b/test.html
@@ -55,11 +55,12 @@
       <iframe src="jwplayer.html" allowfullscreen></iframe>
     </div>
 
-    <!-- X Broadcast -->
+    <!-- X Broadcast
     <div class="frame-box">
       <div class="frame-title">player 3</div>
       <iframe src="#" allowfullscreen></iframe>
     </div>
+     <!-- X Broadcast -->
   </div>
 </body>
 </html>
