--- a/shakaplayer.html
+++ b/shakaplayer.html
@@ -2,127 +2,225 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Live Sports - Shaka Fixed</title>
+  <title>Live Sports - Shaka Low Latency</title>
   <meta name="referrer" content="no-referrer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Shaka Player -->
-  <script src="https://cdn.jsdelivr.net/npm/shaka-player@4.13.3/dist/shaka-player.ui.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/shaka-player@4.13.3/dist/controls.min.css">
-
+  <!-- ✅ Latest Shaka Player UI v4.16.3 -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.16.3/controls.css" crossorigin="anonymous">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.16.3/shaka-player.ui.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- Material Icons -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <style>
-    html,body{margin:0;padding:0;height:100%;width:100%;background:#000;overflow:hidden;font-family:sans-serif;}
-    .shaka-video-container,video{width:100%;height:100%;background:#000;display:block;}
-    .shaka-top-controls{display:none!important}
-
-    /* Control bar */
+    html,
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+      background: #000;
+      overflow: hidden;
+      font-family: sans-serif;
+    }
+    /* -------------------- replay fade style -------------------- */
+    .shaka-replay-button-container {
+      transition: opacity .6s ease;
+    }
+    .shaka-replay-button-container.hide-replay {
+      opacity: 0;
+      pointer-events: none;
+    }
+    /* hide central big play icon completely */
+    .shaka-big-play-button {
+      display: none !important
+    }
+    .shaka-video-container,
+    video {
+      width: 100%;
+      height: 100%;
+      background: #000;
+      display: block;
+    }
+    .shaka-top-controls {
+      display: none !important
+    }
     .shaka-controls-container {
-      background:rgba(0,0,0,0.7)!important;
-      font-size:14px;padding:5px 10px;
+      background: rgba(0, 0, 0, 0.0) !important;
+      font-size: 14px;
+      padding: 5px 10px;
     }
-    .shaka-control-button{color:#fff!important}
-    .shaka-overflow-menu{background:rgba(20,20,20,.95)!important;color:#fff}
-    .shaka-range-element{accent-color:#fff!important} /* sliders in modern browsers */
-
-    /* Big center play */
-    .shaka-big-play-button{
-      background:#666!important;border:3px solid #fff!important;border-radius:50%!important;
-      width:100px!important;height:100px!important;font-size:48px!important;color:#fff!important;
-      display:flex!important;justify-content:center;align-items:center;opacity:.9;transition:opacity 1s
+    .shaka-control-button {
+      color: #fff !important
     }
-    .shaka-big-play-button:hover{background:#888!important;opacity:1}
-
-    /* Remove unwanted greys while playing */
-    .shaka-video-container.playing .shaka-controls-container,
-    .shaka-video-container.playing .shaka-spinner-container,
-    .shaka-video-container.playing .shaka-overflow-menu,
-    .shaka-video-container.playing .shaka-overflow-panel {background:transparent!important}
-
-    /* Loader */
-    #loadingOverlay{position:fixed;inset:0;display:flex;flex-direction:column;justify-content:center;align-items:center;
-      background:rgba(0,0,0,.9);color:#fff;font-size:18px;z-index:2000;opacity:1;transition:opacity 1s}
-    #loadingOverlay.hide{opacity:0;pointer-events:none}
-    .loader{border:5px solid rgba(255,255,255,.2);border-top:5px solid #fff;border-radius:50%;
-      width:60px;height:60px;margin-bottom:20px;animation:spin 1.2s linear infinite}
-    @keyframes spin{to{transform:rotate(360deg)}}
-
-    .watermark{position:absolute;bottom:10%;right:10px;opacity:.5;font-weight:bold;pointer-events:none;color:#fff;z-index:10}
+    .shaka-overflow-menu {
+      background: rgba(20, 20, 20, .95) !important;
+      color: #fff
+    }
+    .shaka-range-element {
+      accent-color: #fff !important
+    }
+    .shaka-big-play-button {
+      background: #666 !important;
+      border: 3px solid #fff !important;
+      border-radius: 50% !important;
+      width: 100px !important;
+      height: 100px !important;
+      font-size: 48px !important;
+      color: #fff !important;
+      display: flex !important;
+      justify-content: center;
+      align-items: center;
+      opacity: .9;
+      transition: opacity 1s
+    }
+    .shaka-big-play-button:hover {
+      background: #888 !important;
+      opacity: 1
+    }
+    #loadingOverlay {
+      position: fixed;
+      inset: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: rgba(0, 0, 0, .9);
+      color: #fff;
+      font-size: 18px;
+      z-index: 2000;
+      opacity: 1;
+      transition: opacity 1s
+    }
+    #loadingOverlay.hide {
+      opacity: 0;
+      pointer-events: none
+    }
+    .watermark {
+      position: absolute;
+      bottom: 80%;
+      right: 80px;
+      opacity: .5;
+      font-weight: bold;
+      pointer-events: none;
+      color: #E61919;
+      z-index: 10
+    }
   </style>
 </head>
 <body>
   <div data-shaka-player-container class="shaka-video-container">
-    <video id="video" data-shaka-player playsinline></video>
+    <video id="video"></video>
   </div>
   <div class="watermark">@NOOBGLITCH</div>
-
   <div id="loadingOverlay">
     <div class="loader"></div>
     <p>Loading stream...</p>
   </div>
-
-<script>
-const apiUrl="https://raw.githubusercontent.com/abusaeeidx/CricHd-playlists-Auto-Update-permanent/main/api.json";
-const targetId=new URLSearchParams(location.search).get("id")||"starhindi";
-const video=document.getElementById("video");
-const loader=document.getElementById("loadingOverlay");
-let player,ui,currentUrl="";
-
-async function initPlayer(){
-  if(!shaka.Player.isBrowserSupported()){loader.querySelector("p").innerText="Browser not supported!";return;}
-  player=new shaka.Player(video);
-
-  // ✅ FULL control panel with seek bar & volume bar
-  ui=new shaka.ui.Overlay(player,document.querySelector(".shaka-video-container"),video);
-  ui.configure({
-    addBigPlayButton:true,
-    controlPanelElements:[
-      'play_pause','time_and_duration','spacer','seek_bar',
-      'mute','volume','volume_bar', // important!
-      'picture_in_picture','fullscreen','overflow_menu'
-    ],
-    overflowMenuButtons:['quality','captions','playback_rate','language']
-  });
-
-  await loadStream();
-  setInterval(loadStream,600000);
-}
-
-async function loadStream(){
-  try{
-    const res=await fetch(apiUrl);
-    if(!res.ok) throw new Error("API fetch failed");
-    const data=await res.json();
-    const channel=data.find(x=>x.id===targetId);
-    if(!channel){document.body.innerHTML="<h2 style='color:white;text-align:center;'>Stream not found</h2>";return;}
-    if(channel.link!==currentUrl){
-      currentUrl=channel.link;
-      await player.load(currentUrl);
-      console.log("🔄 Refreshed:",new Date().toLocaleTimeString());
-      loader.classList.add("hide");
-    }
-  }catch(e){console.error(e);loader.querySelector("p").innerText="Failed to load stream";}
-}
-
-document.addEventListener("DOMContentLoaded",initPlayer);
-
-// 📱 Force LANDSCAPE on fullscreen
-document.addEventListener("fullscreenchange",()=>{
-  if(document.fullscreenElement && screen.orientation?.lock){
-    screen.orientation.lock("landscape").catch(()=>{});
-  }
-});
-
-// 🎬 Overlay tweaks
-video.addEventListener("playing",()=>{
-  document.querySelector(".shaka-video-container").classList.add("playing");
-  const btn=document.querySelector(".shaka-big-play-button");
-  if(btn) setTimeout(()=>btn.style.display="none",3000);
-});
-video.addEventListener("pause",()=>{
-  document.querySelector(".shaka-video-container").classList.remove("playing");
-  const btn=document.querySelector(".shaka-big-play-button");
-  if(btn){btn.style.display="flex";btn.style.opacity="1";}
-});
-</script>
+  <script>
+    document.addEventListener('DOMContentLoaded', async () => {
+      shaka.polyfill.installAll();
+      if (!shaka.Player.isBrowserSupported()) {
+        console.error('Browser not supported');
+        document.getElementById('loadingOverlay').querySelector("p").innerText = "Browser not supported!";
+        return;
+      }
+      const video = document.getElementById('video');
+      const player = new shaka.Player(video);
+      const container = document.querySelector('.shaka-video-container');
+      const ui = new shaka.ui.Overlay(player, container, video);
+      ui.configure({
+        addBigPlayButton: true, 
+        singleClickForPlayAndPause: true,
+        controlPanelElements: [
+          'play_pause', 'time_and_duration', 'spacer', 'mute', 'volume',
+          'language', 'captions', 'picture_in_picture', 'quality', 'fullscreen'
+        ],
+        volumeBarColors: {
+          base: 'rgba(255, 0, 0, 0.6)',
+          level: 'rgb(255, 0, 0)'
+        },
+        seekBarColors: {
+          base: 'rgba(255, 165, 0, 0.4)',
+          buffered: 'rgba(255, 140, 0, 0.6)',
+          played: 'rgb(255, 69, 0)'
+        }
+      });
+      let cookieHeader = "";
+      try {
+        const response = await fetch("https://raw.githubusercontent.com/alex8875/m3u/refs/heads/main/jtv.m3u");
+        const m3uText = await response.text();
+        const match = m3uText.match(/"cookie":"([^"]+)"/);
+        if (match && match[1]) {
+          cookieHeader = match[1];
+          console.log("Cookie Token fetched:", cookieHeader);
+        } else {
+          console.warn("No cookie found in M3U file");
+        }
+      } catch (err) {
+        console.error("Failed to fetch token:", err);
+      }
+   const drmConfig = {
+        clearKeys: {
+          "400131994b445d8c8817202248760fda": "2d56cb6f07a75b9aff165d534ae2bfc4"
+        }
+      };
+      const streamUrl = "https://jiotvpllive.cdn.jio.com/bpk-tv/Star_Sports_HD1_Hindi_BTS/output/index.mpd";
+      player.configure({
+        drm: drmConfig,
+        streaming: {
+          lowLatencyMode: true,
+          bufferingGoal: 15,
+          rebufferingGoal: 2,
+          bufferBehind: 15,
+          retryParameters: {
+            timeout: 10000,
+            maxAttempts: 5,
+            baseDelay: 300,
+            backoffFactor: 1.2
+          },
+          segmentRequestTimeout: 8000,
+          segmentPrefetchLimit: 2
+        },
+        manifest: {
+          retryParameters: {
+            timeout: 8000,
+            maxAttempts: 3
+          }
+        }
+      });
+      player.getNetworkingEngine().registerRequestFilter((type, request) => {
+        request.headers["Referer"] = "https://www.jiotv.com/";
+        request.headers["User-Agent"] = "plaYtv/7.1.5 (Linux;Android 13) ExoPlayerLib/2.11.6";
+        if (cookieHeader) request.headers["Cookie"] = cookieHeader;
+        if (
+          (type === shaka.net.NetworkingEngine.RequestType.MANIFEST ||
+            type === shaka.net.NetworkingEngine.RequestType.SEGMENT) &&
+          request.uris[0] && cookieHeader && !request.uris[0].includes("hdnea=")
+        ) {
+          const sep = request.uris[0].includes("?") ? "&" : "?";
+          request.uris[0] += sep + cookieHeader;
+        }
+      });
+      try {
+        await player.load(streamUrl);
+        console.log("Stream loaded successfully");
+        document.getElementById("loadingOverlay").classList.add("hide");
+      } catch (error) {
+        console.error("Load error:", error);
+        const overlay = document.getElementById("loadingOverlay");
+        overlay.querySelector("p").innerText = "Failed to load stream";
+        overlay.classList.remove("hide");
+      }
+      // Minor styling tweak: hide play button during playback
+      video.addEventListener("playing", () => {
+        const btn = document.querySelector(".shaka-big-play-button");
+        if (btn) setTimeout(() => btn.style.display = "none", 2000);
+      });
+      video.addEventListener("pause", () => {
+        const btn = document.querySelector(".shaka-big-play-button");
+        if (btn) btn.style.display = "flex";
+      });
+    });
+  </script>
 </body>
 </html>
