--- a/master/claperurl.html
+++ b/master/claperurl.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <!-- Disables iframe sandbox scaling quirks -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NoobGLTCH – Clappr HLS Player (Default Style)</title>
+  <title>NoobGLTCH – HLS Player (Fullscreen + Android Ready)</title>
+  <meta name="theme-color" content="#000" />
   <style>
     html, body {
       margin: 0;
@@ -12,8 +14,9 @@
       height: 100%;
       overflow: hidden;
       background: #000;
+      font-family: sans-serif;
     }
-    #player {
+    #player, #placeholder {
       position: absolute;
       top: 0;
       left: 0;
@@ -21,18 +24,13 @@
       height: 100%;
     }
     #placeholder {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
-      text-align: center;
+      flex-direction: column;
       color: #ccc;
+      text-align: center;
       background: #000;
-      font-family: sans-serif;
     }
     code { color: #88f; }
   </style>
@@ -40,32 +38,48 @@
 <body>
   <div id="player"></div>
   <div id="placeholder" style="display:none;">
-    🔇 No stream loaded.<br>
+    🔇 No stream loaded.<br />
     Add <code>?url=YOUR_HLS_LINK</code> to the page URL.
   </div>
 
-  <!-- Clappr library -->
+  <!-- Clappr core -->
   <script src="https://cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script>
 
   <script>
     const params = new URLSearchParams(window.location.search);
     const streamURL = params.get("url");
+    const placeholder = document.getElementById("placeholder");
 
     if (!streamURL) {
-      document.getElementById("placeholder").style.display = "flex";
+      placeholder.style.display = "flex";
     } else {
-      new Clappr.Player({
+      // ↓ Create Clappr instance
+      const player = new Clappr.Player({
         source: streamURL,
         parentId: "#player",
         width: "100%",
         height: "100%",
         autoPlay: false,
         mute: false,
-        playback: {
-          playInline: true
-        }
+        playback: { playInline: true },
+        disableVideoTagContextMenu: true,
+        mediacontrol: { seekbar: "#2196F3", buttons: "#2196F3" },
       });
-      console.log("🟢 Clappr ready –", streamURL);
+
+      // Enable orientation lock on fullscreen toggle
+      player.on(Clappr.Events.PLAYER_READY, () => {
+        const container = player.core.getCurrentContainer();
+
+        container.on(Clappr.Events.CONTAINER_FULLSCREEN, (isFullscreen) => {
+          if (isFullscreen && screen.orientation && screen.orientation.lock) {
+            screen.orientation.lock("landscape").catch(() => {});
+          } else if (screen.orientation && screen.orientation.unlock) {
+            screen.orientation.unlock();
+          }
+        });
+      });
+
+      console.log("🟢 Clappr loaded:", streamURL);
     }
   </script>
 </body>
