--- a/master/plyriourl.html
+++ b/master/plyriourl.html
@@ -1,120 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>NoobGLTCH – Strict Fullscreen Plyr HLS Player</title>
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0" />
-
-  <!-- Plyr default stylesheet -->
-  <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/plyr@3.7.8/dist/plyr.css" />
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>NOOBGLITCH Player</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/plyr@3.7.8/dist/plyr.css">
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      width: 100vw;
-      height: 100vh;
-      overflow: hidden;
-      background: #000;
-    }
-    #player-container {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background: #000;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    video {
-      width: 100vw !important;
-      height: 100vh !important;
-      background: #000;
-      object-fit: cover; /* fills viewport with video */
-      display: block;
-    }
-    #placeholder {
+    body, html { margin: 0; background: #000; height: 100%; overflow: hidden; }
+    .plyr { height: 100%; width: 100%; }
+    video { object-fit: contain; }
+
+    /* RED WATERMARK */
+    .wm {
       position: absolute;
-      inset: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      color: #ccc;
-      background: #000;
-      font-size: 1.2em;
-      text-align: center;
+      top: 50px; 
+      right: 20px;
+      color: #FF0000;
       font-family: Arial, sans-serif;
+      font-weight: bold;
+      font-size: 18px;
+      text-transform: uppercase;
+      opacity: 2;
+      z-index: 10;
+      pointer-events: none;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+      user-select: none;
     }
-    code { color: #7ff; }
   </style>
-
-  <!-- Plyr + HLS.js -->
-  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-  <script src="https://cdn.jsdelivr.net/npm/plyr@3.7.8/dist/plyr.min.js"></script>
 </head>
-
 <body>
-  <div id="player-container">
-    <video id="player" controls playsinline crossorigin></video>
-    <div id="placeholder" style="display:none;">
-      🔇 No stream loaded.<br>Add <code>?url=YOUR_HLS_LINK</code> to the page URL.
-    </div>
-  </div>
 
-  <script>
-    const params = new URLSearchParams(window.location.search);
-    const streamURL =
-      params.get("url") ||
-      "https://bitdash-a.akamaihd.net/content/sintel/hls/playlist.m3u8";
+<div class="wm">@NOOBGLITCH</div>
+<video id="player" playsinline crossorigin></video>
 
-    const video = document.getElementById("player");
-    const placeholder = document.getElementById("placeholder");
+<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+<script src="https://cdn.jsdelivr.net/npm/plyr@3.7.8/dist/plyr.min.js"></script>
 
-    if (!streamURL) {
-      placeholder.style.display = "flex";
-    } else {
-      if (Hls.isSupported()) {
-        const hls = new Hls();
-        hls.loadSource(streamURL);
-        hls.attachMedia(video);
+<script>
+  const video = document.getElementById('player');
+  const source = new URLSearchParams(window.location.search).get("url") || "https://bitdash-a.akamaihd.net/content/sintel/hls/playlist.m3u8";
 
-        hls.on(Hls.Events.MANIFEST_PARSED, () => {
-          new Plyr(video, {
-            controls: [
-              'play-large', 'play', 'pause',
-              'progress', 'current-time', 'duration',
-              'mute', 'volume',
-              'captions', 'settings', 'pip', 'airplay', 'fullscreen'
-            ]
-          });
-          console.log("🟢 Plyr + HLS ready");
-        });
+  // Optimization Config for Faster Loading
+  const hlsConfig = {
+    enableWorker: true,        // Offload processing to a web worker
+    lowLatencyMode: true,      // Reduces delay for live streams
+    backBufferLength: 30,      // Keeps less memory used
+    maxBufferLength: 10,       // Don't wait to buffer too much before starting
+    maxMaxBufferLength: 20,
+    startLevel: -1,            // Auto-detect best start quality
+    abandonFragmentTimeout: 3000 // Quickly switch if a segment is slow
+  };
 
-        hls.on(Hls.Events.ERROR, (event, data) => {
-          console.warn("⚠️ HLS error:", data);
-        });
-      } else if (video.canPlayType("application/vnd.apple.mpegurl")) {
-        video.src = streamURL;
-        new Plyr(video);
-      } else {
-        placeholder.style.display = "flex";
-        placeholder.textContent = "❌ Browser does not support HLS playback.";
-      }
-    }
-
-    // Maintain exact 100 % viewport on resize/orientation changes
-    const resizeFix = () => {
-      document.documentElement.style.height = window.innerHeight + "px";
-      document.documentElement.style.width = window.innerWidth + "px";
-      document.body.style.height = window.innerHeight + "px";
-      document.body.style.width = window.innerWidth + "px";
-    };
-    window.addEventListener("resize", resizeFix);
-    resizeFix();
-  </script>
+  if (Hls.isSupported()) {
+    const hls = new Hls(hlsConfig);
+    hls.loadSource(source);
+    hls.attachMedia(video);
+    
+    hls.on(Hls.Events.MANIFEST_PARSED, () => {
+      const levels = hls.levels.map(l => l.height);
+      const qualityOptions = [0, ...levels]; 
+      
+      const player = new Plyr(video, {
+        autoplay: true, // Attempt to play immediately
+        quality: {
+          default: 0,
+          options: qualityOptions,
+          forced: true,
+          onChange: (newQuality) => {
+            if (newQuality === 0) hls.currentLevel = -1; 
+            else hls.currentLevel = hls.levels.findIndex(l => l.height === newQuality);
+          }
+        }
+      });
+      video.play(); // Direct play call for speed
+    });
+    window.hls = hls; 
+  } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
+    video.src = source; 
+    const player = new Plyr(video, { autoplay: true });
+    video.play();
+  }
+</script>
 </body>
 </html>
