--- a/master/shakaplayerurl.html
+++ b/master/shakaplayerurl.html
@@ -32,9 +32,9 @@
     /* optional watermark */
     .watermark {
       position: absolute;
-      top: 10px;
-      right: 10px;
-      opacity: .5;
+      top: 40px; 
+      right: 20px;
+      opacity: 2;
       font-weight: bold;
       color: #e53935;
       z-index: 10;
