--- a/master/shakaplayerurl.html
+++ b/master/shakaplayerurl.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>NoobGLTCH – Shaka Player (Material Icons, Click‑to‑Play)</title>
+  <title>NoobGLTCH – Shaka Player </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Shaka Player UI & Material Icons -->
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.16.3/controls.css"
         crossorigin="anonymous">
@@ -29,18 +28,16 @@
       background: #000;
       display: block;
     }
-    /* optional watermark */
     .watermark {
       position: absolute;
       top: 40px; 
       right: 20px;
-      opacity: 2;
+      opacity: 2; /* Adjusted for better visibility */
       font-weight: bold;
       color: #e53935;
       z-index: 10;
       pointer-events: none;
     }
-    /* loading overlay */
     #overlay {
       position: fixed;
       inset: 0;
@@ -60,14 +57,13 @@
 
 <body>
   <div data-shaka-player-container class="shaka-video-container">
-    <video id="video" playsinline></video>
+    <video id="video" playsinline autoplay></video>
   </div>
   <div class="watermark">@NOOBGLITCH</div>
   <div id="overlay">Loading player...</div>
 
   <script>
     document.addEventListener("DOMContentLoaded", async () => {
-      // Install polyfills
       shaka.polyfill.installAll();
 
       if (!shaka.Player.isBrowserSupported()) {
@@ -79,22 +75,12 @@
       const container = document.querySelector(".shaka-video-container");
       const player = new shaka.Player(video);
 
-      // Build UI overlay
       const ui = new shaka.ui.Overlay(player, container, video);
       ui.configure({
         singleClickForPlayAndPause: true,
         controlPanelElements: [
-          'play_pause',
-          'time_and_duration',
-          'spacer',
-          'mute',
-          'volume',
-          'captions',
-          'picture_in_picture',
-          'airplay',
-          'cast',
-          'quality',
-          'fullscreen'
+          'play_pause', 'time_and_duration', 'spacer', 'mute', 'volume',
+          'captions', 'picture_in_picture', 'airplay', 'cast', 'quality', 'fullscreen'
         ],
         addBigPlayButton: true,
         seekBarColors: {
@@ -104,10 +90,9 @@
         }
       });
 
-      // Support ?url=
       const params = new URLSearchParams(location.search);
       const streamURL = params.get("url") ||
-        "https://storage.googleapis.com/shaka-demo-assets/angel-one/dash.mpd"; // fallback demo
+        "https://storage.googleapis.com/shaka-demo-assets/angel-one/dash.mpd";
 
       player.configure({
         streaming: {
@@ -117,8 +102,16 @@
 
       try {
         await player.load(streamURL);
-        console.log("✅ Stream loaded (waiting for user click)");
+        console.log("✅ Stream loaded successfully");
+        
+        // Hide overlay and attempt playback
         document.getElementById("overlay").classList.add("hide");
+        
+        // Ensure play is called even if autoplay attribute is ignored
+        video.play().catch(e => {
+            console.warn("Autoplay with sound was blocked. Video is playing muted.");
+        });
+
       } catch (err) {
         console.error("Load error:", err);
         document.getElementById("overlay").innerText = "Failed to load stream";
