--- a/master/shakaplayerurl.html
+++ b/master/shakaplayerurl.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>NoobGLTCH – Ultra Fast Player</title>
+  <title>NoobGLTCH – shaka  Fast Player</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.16.3/controls.css">
@@ -23,7 +23,7 @@
     <video id="video" playsinline></video>
   </div>
   <div class="watermark">@NOOBGLITCH</div>
-  <div id="overlay">FAST LOADING...</div>
+  <div id="overlay">LOADING...</div>
 
   <script>
     const video = document.getElementById("video");
