--- a/master/playerjsurl.html
+++ b/master/playerjsurl.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NoobGLTCH – Universal PlayerJS HLS Player (Full Size)</title>
-  <link rel="stylesheet" href="https://cxh.pages.dev/style.css" />
   <style>
     html, body {
       margin: 0;
@@ -47,7 +46,7 @@
     Add <code>?url=YOUR_HLS_LINK</code> to the page URL.
   </div>
 
-  <script src="playerjslive.js"></script>
+  <script src="playerjs.js"></script>
 
   <script>
     // Get ?url= query parameter
